--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-    </div> /.carousel --> -->
+    </div> /.carousel --> 
 
 
     <!-- Marketing messaging and featurettes
@@ -189,6 +189,7 @@
           <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
       </div>
+ -->
       <hr class="featurette-divider">
 
       <!-- /END THE FEATURETTES -->
