--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <!-- NAVBAR
 ================================================== -->
   <body>
-    <div class="navbar-wrapper">
+    <!-- <div class="navbar-wrapper">
       <div class="container">
 
         <nav class="navbar navbar-inverse navbar-static-top">
@@ -44,7 +44,7 @@
                 <span class="icon-bar"></span>
               </button>
               <a class="navbar-brand" href="#">Standard Millwork</a>
-            </div>
+            </div> -->
             <!-- <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
@@ -64,11 +64,11 @@
                 </li>
               </ul>
             </div> -->
-          </div>
+          <!-- </div>
         </nav>
 
       </div>
-    </div>
+    </div> -->
 
 
     <!-- Carousel
@@ -120,41 +120,43 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-    </div> /.carousel --> 
+    </div> /.carousel -->
 
 
     <!-- Marketing messaging and featurettes
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
-    <div class="container marketing">
+    <div class="container" display="flex" width="100%" flex-direction="column" padding="10%">
+      <img class="img-circle" src="under-construction.gif" alt="Under construction"  width="100%">
 
       <!-- Three columns of text below the carousel -->
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-lg-4">
           <img class="img-circle" src="kaseysites.jpg" alt="Kasey Sites portrait" width="140" height="140">
           <h2>Kasey Sites</h2>
           <p>Owner. Tells Madison and Joe what to do.</p>
           <p><a class="btn btn-default" href="mailto:kasey@standardmillwork.com" role="button">Email directly &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
+        </div>
+
         <div class="col-lg-4">
           <img class="img-circle" src="josephsites.jpg" alt="Joseph Sites portrait" width="140" height="140">
           <h2>Joseph Sites</h2>
           <p>Does what Kasey says. Sometimes. </p>
           <p><a class="btn btn-default" href="mailto:joe@standardmillwork.com" role="button">Email directly &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
+        </div>
         <div class="col-lg-4">
           <img class="img-circle" src="MadisonSquare.jpeg" alt="Madison Sites portait" width="140" height="140">
           <h2>Madison Sites</h2>
           <p>Sits on the computer all day</p>
           <p><a class="btn btn-default" href="mailto:madison@standardmillwork.com" role="button">Email directly &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-      </div><!-- /.row -->
+        </div>
+      </div> -->
 
 
       <!-- START THE FEATURETTES -->
 
-      <hr class="featurette-divider">
+      <!-- <hr class="featurette-divider">
 
       <div class="row featurette">
         <div class="col-md-7">
@@ -164,7 +166,7 @@
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block" src="shopmap.jpg" alt="Google Earth image of Standard Millwork">
         </div>
-      </div>
+      </div> -->
 
       <!-- <hr class="featurette-divider">
 
@@ -190,18 +192,19 @@
         </div>
       </div>
  -->
-      <hr class="featurette-divider">
+      <!-- <hr class="featurette-divider"> -->
 
       <!-- /END THE FEATURETTES -->
 
 
       <!-- FOOTER -->
-      <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2015 Standard Millwork &middot; <!-- <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p> -->
-      </footer>
+      <!-- <footer> -->
+        <!-- <p class="pull-right"><a href="#">Back to top</a></p> -->
+        <!-- <p>&copy; 2021 Standard Millwork &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p> -->
+      <!-- </footer> -->
 
-    </div><!-- /.container -->
+    </div>
+    <!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
