--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <!-- Latest compiled and minified JavaScript -->
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
-    <link rel="icon" href="../../favicon.ico">
+    <!-- <link rel="icon" href="../../favicon.ico"> -->
 
     <title>Standard Millwork</title>
 
@@ -26,7 +26,6 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="carousel.css" rel="stylesheet">
   </head>
 <!-- NAVBAR
 ================================================== -->
@@ -127,7 +126,8 @@
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
-    <div class="container" display="flex" width="100%" flex-direction="column" padding="10%">
+    <div class="container">
+      <h1 style="text-align: center;">Standard Millwork is under construction</h1>
       <img class="img-circle" src="under-construction.gif" alt="Under construction"  width="100%">
 
       <!-- Three columns of text below the carousel -->
@@ -198,10 +198,14 @@
 
 
       <!-- FOOTER -->
-      <!-- <footer> -->
+      <footer>
         <!-- <p class="pull-right"><a href="#">Back to top</a></p> -->
         <!-- <p>&copy; 2021 Standard Millwork &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p> -->
-      <!-- </footer> -->
+        <!-- <div> -->
+          <img style="width:50px; height: 50px;" class="img-circle" src="madipixel.gif" alt="Madison Pixel">
+          <p>Hard work in progress by <a href="https://madisonmsites.com">Madison Sites</a></p>
+        <!-- </div> -->
+      </footer>
 
     </div>
     <!-- /.container -->
